# revelio

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-TW.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  THIRD_PARTY_LICENSES.md  TODO.md
.github/workflows/: ci.yml
docs/: architecture.md  setup.md
docs/decisions/: 001-dual-mode-architecture.md  002-memory-management-strategy.md  003-pdf-processing-architecture.md
src/mcp-server/: README.md  ocr_common.py  ocr_to_file.py  pyproject.toml  server.py
src/mcp-server/tests/: test_ocr_common.py  test_ocr_to_file.py
src/skill/: README.md  SKILL.md
