[project]
name = "revelio"
version = "0.5.0"
description = "Privacy-first local document processing: EasyOCR for images, opendataloader-pdf for PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "mcp>=1.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
